--- a/detail.html
+++ b/detail.html
@@ -641,7 +641,7 @@
           
             </div>
           
-            <div class="row text-center mx-5 px-5">
+            <div class="row text-center">
               <div class="col-2">
                 <h6>Available</h6>
               </div>
